--- a/busManage/templates/busManage.html
+++ b/busManage/templates/busManage.html
@@ -54,6 +54,8 @@
         <h1>Welcome to Bus Management</h1>
         <a href="{% url 'upload_student_data' %}" class="btn">Upload Student Data</a>
         <a href="{% url 'select_data' %}" class="btn">Select Data</a>
+
+        <a href="{% url 'bus_route_service_list' %}" class="btn">View service dates</a>
     </div>
 </body>
 </html>
